--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 <script>
 (function(){
-  emailjs.init("YOUR_PUBLIC_KEY"); // 🔴 REPLACE
+  emailjs.init("jv4dBelhXAoMEvANF"); // 🔴 REPLACE
 })();
 </script>
 
@@ -194,8 +194,8 @@ button:hover{transform:scale(1.07)}
 <script>
 /* ===== CONFIG ===== */
 const PASSWORD="Us_1402";
-const SERVICE_ID="YOUR_SERVICE_ID";   // 🔴
-const TEMPLATE_ID="YOUR_TEMPLATE_ID"; // 🔴
+const SERVICE_ID="service_4g3s7m7";   // 🔴
+const TEMPLATE_ID="template_zsq4g6c"; // 🔴
 
 function logEvent(e){
  emailjs.send(SERVICE_ID,TEMPLATE_ID,{
