--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ function heartsReact(){
 </div>
 
 <script>
-const PASSWORD="Us_1402";
+const PASSWORD="Forever";
  
  /* ===== EMAILJS IDS ===== */
 const SERVICE_ID  = "service_4g3s7m7";   // 👈 paste your Service ID here
